tests/macros/multi_select/mask.stderr
error: option `mask` does not exist for kind `multi_select`
 --> $DIR/mask.rs:2:49
  |
2 |     let q = requestty::questions![MultiSelect { mask: todo!() }];
  |                                                 ^^^^
