tests/macros/multi_select/mask.rs
fn main() {
    let q = requestty::questions![MultiSelect { mask: todo!() }];
}
